# se-research-skills

./: .gitignore  README.md  pyproject.toml
brainstorming/: SKILL.md
brainstorming/assets/: template.md
brainstorming/scripts/: zotero.py
code-review/: SKILL.md
code-review/references/: code-reviewer-prompt.md
ese-review/: SKILL.md
excalidraw-diagram/: SKILL.md
excalidraw-diagram/references/: excalidraw-format.md  svg-images.md
excalidraw-diagram/scripts/: build.py  export_png.mjs
gh-pr/: SKILL.md
gh-pr/scripts/: pre-pr-check.sh
git-clean/: SKILL.md
git-push/: SKILL.md
git-push/scripts/: pre-push-check.sh
md2gdoc/: SKILL.md
md2gdoc/references/: gcp-setup.md
md2gdoc/scripts/: md2gdoc.py
mh-writing/: SKILL.md
mh-writing/references/: abstract.md  actionable-findings.md  background-and-related-work.md  bibliography.md  conclusion.md  discussion.md  experimental-setup.md  figures-and-tables.md  hedging-and-tense.md  introduction.md  paragraph-construction.md  problem-formulation.md  proposed-solution.md  results.md  threats-to-validity.md  title.md
mh-writing/templates/: outline-template.md  terminology-template.md
ob-excalidraw/: SKILL.md
ob-excalidraw/assets/: template.excalidraw.md
ob-excalidraw/references/: academic-palettes.md  excalidraw-schema.md
plan/: SKILL.md
plan/references/: code-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
project-draft/: SKILL.md
rp-generate/: SKILL.md
skill-creator/: SKILL.md
systematic-debugging/: SKILL.md
tdd/: SKILL.md
weekly-report/: SKILL.md
(+34 files in other folders)
