[project]
name = "se-research-skills"
version = "0.1.0"
description = "Claude Code skills for SE research workflows"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.2.0",
    "requests>=2.31",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "python-frontmatter>=1.0",
]
